 - [DS-321] DSpace command launcher
 - [DS-327] SWORD temp upload directory missing trailling slash
 - [DS-328] SWORD service documents do not include atom:generator element
 - [DS-333] Adjust SWORD ingest crosswalk to store bibliographic citation
 - [DS-372] New verbose option for [dspace]/bin/dspace cleanup script

(Larry Stone)
 - [DS-294] Add preferred language setting to Edit Profile page in XMLUI
 - [DS-361] Syndication Feeds refactoring, support all RSS/Atom formats for both feed and OpenSearch
 - [DS-369] Follow harvest.includerestricted.rss in XMLUI
 - [DS-349] Admins can choose Internal BitstreamFormats in XMLUI
 - [DS-347] Add --quiet option to filter-media (MediaFilterManager) to disable progress messages
 - [DS-297] Move PostgreSQL-specific SQL into etc/postgres for greater clarity
 - [DS-338] Disable cache advice (Expires header) on Bitstream download that requires authorization (XMLUI)
 - [DS-285] Respond to If-Modified-Since request header in XMLUI, also provide Last-Modified response header for Bitstreams
 - [DS-288] Configurable option to hide metadata fields in public UIs and OAI-PMH
 - [DS-236] Authority control for metadata fields and Choice Authority plugin framework
 - [DS-128] Fix repositioning on submission pages after add button is clicked (XMLUI)
 - [DS-255] Protect submission from being lost if exception occurs in CompleteStep
 - [DS-254] Fix response for authorization failure on Bitstream when user is logged-in
 - [DS-232] Parse personal names correctly if there is no space after the last name
 - [DS-191] metadataschemaregistry_seq is not initialized correctly under Oracle
 - [DS-193] OAI RDF crosswalk fails when DC value is null
 - [DS-249] sub-daily utility script does not pass arguments to Java
 - [DS-252] Interpolate variables in the Subject: line of email templates as well
 - [DS-262] Bug in DS-118, new patch included
 - [DS-274] Typo in XSL breaks rendering of dri:xref with class